inceptionOfThings/p2/ingress.yml
# https://doc.traefik.io/traefik/providers/kubernetes-ingress/
# il faut utiliser un ingress de traefik


# Le concept qui a l'air interessant est le suivant: 
# https://kubernetes.io/docs/concepts/services-networking/ingress/#name-based-virtual-hosting

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  app-one
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  app-two
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  app-three
                port:
                  number: 80
